package com.benlau.bofteam1;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class ProfileToCourseHistoryRunthroughEspressoTEST {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void profileToCourseHistoryRunthroughEspressoTEST() {
        ViewInteraction materialButton = onView(
                allOf(withId(R.id.Allow_btn), withText("Allow"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        materialButton.perform(click());

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.photoField),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText.perform(click());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.photoField),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText2.perform(replaceText("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAoHCBYWFRgWFhYZGRgaHB0aHRoaGhwZGhkeGBwcGhoeHhocIS4lHB4rIxgcJjgmKy8xNjU1HCQ7QDs0Py40NTEBDAwMEA8QHxISHzQrJSs0NDY1NDQ0NDQ0NjQ0NDQ0NDQ9NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NP/AABEIAMIBAwMBIgACEQEDEQH/xAAcAAACAgMBAQAAAAAAAAAAAAAEBQMGAAECBwj/xAA9EAABAwIEBAQFAwMEAQMFAAABAAIRAyEEEjFBBVFhcQYigZEyobHB8BNC4RRS0SNicvGCBxUzFkNzksL/xAAaAQADAQEBAQAAAAAAAAAAAAABAgMEAAUG/8QAKREAAgICAgICAgIBBQAAAAAAAAECEQMhEjFBUQQTImEyoXEUFUJSsf/aAAwDAQACEQMRAD8AZ47Gsoh+KxL89NjppAiDWeNCOdNp02LpIgLyPjHFKmKrvrVDJcbAmzRs0KfxR4hqYyrmd5WNsxg0a0WFuaXsslnJvY8IoM4Q4srU3W+IDXnb7r3Lw4+QCIOn5ovEeE0y+tTaJMvbYDrtC914Lw002AvJB/t39eXZR/J9F3S7Kdxjh9U4uoyhTLwXA5WgN/TkAmSTlg5swJy6xeJL3hfgttnV35j/AGMMNH/J+p9I7qzPra7dulr87CPRDVMX1VOK7ZDm1pBdChQpNytY0dGiB6nVx7pbxGvmPwgAaQPyVxUxKEqVZTWJ2ZmXedCucpGuQsNEpctZlC6u0bqCtxAAQAkc4ryFRYZmWs6T1OJHYj2Qb+In+4qUs0UOoMsZeuHPCqj+JHmfdDVuLZdSfdD7v0c412XT9RbbUVCZx4EwXOHdxj6o1nET/cZ/5Lnm/QIpS6LnnWZ1VGcWeP3T7fVEs4weYKZZosZwZaMNWgpzTqSFSaPFgdvZP8BxFjgLx3R5xfkHEetepG1EG187rtrkUzqDWvSninhvD1wSWZHmf9SnDXDqRBa4/wDIFGtepGvTKTQrR5hx7wLiaUupf67I1H/yerDt0Z3gKnOpEWNiLRERC+h2PSfjvhjD4oEvZlftUZAf0nZw7+kIv8ikJ8VTR4g2muwxPvEPhWvhfM6HU5tUaDlvpnH7D3tyJSBwN7hMk0U5KXQs4qZ8vL6qDh1ZocM9r72Vi4H4ediS573FlJpguHxPdrkZIiYMkmQJFjKtuH4fQomKVFjSP3uGd5/83SfaEFb7EnSejzrFYwue4jQlYvTv6h/N3/7LERNnl+E8NYt7Q9mFruaQCCKbrg3BAiSDsRZGcO8KYyrUbTGGqMLr5qjXMY0DVznlugmCLmbRNl77hnEhkTDbE6DS8AaDpdSYnEE9kqqRzfErfhjwrQwTczfPWIh1VwuOYYP2t+Z3OycVayjq1UFVqp6JuTfZK+uN59Oe3og31Fy96he+LlcA7LlzE7gDmTA/k9NUvq47ZoUeGDqr8rdP3HkOqg8yulsqsbathNXFAaIcYhzjAUPEMG5jw0GWu0O8DWR059VpuJDW5Wi/PmoucpOmVUFVoLDmjW/fT2Q1bEs/2+yDw9R0OD4M8p+6XNwb3Pyl4BOgkSewS260gqIxaQ4xA9JW8dgREsnst4fAhglzpP5oim4kRAv8ymUU1sD70VnEYdw5j0SaqHgwbhXsOzB7cs6AWuDP/V/8pbV4I515YzufsJSqNdCyipKmVWlhHP0BHfVMKGHLQAJsrCzgrgLPHeCB80LWwDm2Lm+l10k6OxxjHoVF/K55C59kSxuUZnugI3CcNEZhed+i1iMDnkGwNrbDQX9EYRXbHlJvSAqWPn4dBueXdNMHjiD5ggcL4abmlz3G8x20m/U/hT1/DRaxja/vC6UF4Fhf/JDDBcRI0ee2ydYbikxmj0VZp4BnNw/OyYUMGzZzvWP8KUZSi+yjjFlop1g7QqYPVbNXIOvdHYXiYNj91aOZXTJuI6a9E0avPRL2OsDsVKx6umTaGT6IINgQRBBuCDqIOoXm3i//ANPpDquCF7l1CYB//Gdj/tNuRGi9Dw9eOyndBuPVVUtCq0zz7gmHazA4drhla2kXvnylry5zn5p0IMgzpEJXisLUDWvc7KHmGMFqjrEy8keQQJIFxzmy9C4rgP1WQ2A6Qb6OAcC4HuBHqvPPEZqsxbZcXtyeVphpaSYiPwn0S5p8cTce10W+Pj+3JxfXZ1S4cyBmLydz+o8T6Z7LaX4njQY4tcIcDBALTHrKxeB9nzPbPT/0a/6nqDoaMo0+p5oSo/fZd1XoKvVtGy+jUaR4bZFWqIN71JVcg69XKF0nRy2brVQ0SlGLxZM8uSixeKndKa2IJMLFlyuWkaceP2NGsc5sgwDoNSRv6WTvh9MUqT3NMkm57AEDtdIsJTc9hLHeaPh0JAkeU7/wiOG8RLC5j2Ocw6zAc3I0TYm5Atl1IAtOqYuN/seTTVIFxWOe98mI9T/4jQafdRPqAnry17fWPZMKnCM4z0HNew8iQR67HoYIQP8AS1W/seDe4BOs7tmdp7FVaCmjKL+h/PzRMcAWElztdBppzPb7KDBcMecrnNi+jgR9xborLhuBsyEuMuItlAaBbS1ye5vCjlyRjpsLcUtsXVMryJgNHwzuY5XWg1n7hNtBEeyp/FeJmnUdTqNc17XWcwwMuxAAv6gx6LvAeIsxa0mYcDmg+5F4Nh3VoJVZq+rG0qZaMQwADIA0d4+f8oaowsAOUvcdIEj0hYyscodNv9pL2xpqBoexjkuqNSxc0jL0u3tJjTXQdlRwT2hZYIgVVtd4zFrgOgn6XQFTB1KT2PzE3a9rx5mggg3sYg9NrSnFamxxJLi1x/c0ke4FohbpvcwNzPaSCSHukOk2iMpJd1v9Im8dBWCLWmT8KZ/pNmxEg+9zBvBXLKQmCNOfTv8AlwpG4kAB1nScpyk9Mt7yTPzRlKnTrWY5zX63H8wRfYyuUWiMsMou60BZXA2HyIlHUHkwCO3Rc1eGVBoQ7tafQ+ijZQe39jhFzb+E3ZJh7WBw0uPoo6uHIuDEajT25qNlfzC/f8PZd18Qss1xlTO/wK+IYssBn8KX4DiDhus41iQSGdJKXUByQa1Y6Wi6cK4uWGDLmnUb/wA9lZMPWDxmaZG/MTzC86w1Qp/w/FlsX/OvNPDJWmJKHlFvpuRFN8JdhMQHjryRbStMZX0RaCA5JPE/ABiGOczK2uG5WvO4kEtJ6wQDtKcArtpTtKSpgjKUJXE8Pr+HKwcQ6lXneKciTcwQTPdYvbnUGnVv1WKf0x9s3/7pk9f2JqzkHUKIqlCVStlHk2C16gbc2CQYvEyZR3Fa14/OiQYqveF5+fK2+KNOKHkHxNZc0WSgsQ+Sj8J63t09Ot1GKNSVEsOYQ5riCDI33GYxYGQAI3gdEwxoFWkK7QLw1413AnuDaeUFdnAB1A1Jl5MBrXtNryS3LmAFpM2mTFl3wSgQHte2WPHwzckghwHcb9F2WPGpLx/4Qnr8l4FTQ5vnY5zHblpIkdY1CZ4Pi1afO9pABglok8tvVLquJaTlY0NeQQ5uZxbItYuF95BO2qnOHa5pewkCQ0TNzeddRpfqrJvwM+T3FJ/5Dq3FKktLneWdgBHW2qfYbGjLLjDeZNgVSaT84yk/96X6bIDEOe4ZP1DAAAc0zAGvKTH0WL5Px/skmnQmTjNKS1Y48R4nD1agaILiMpgkRJjNMesbojA8MpsbDWhjdC7d0Wu7Vxn+ELw/htKkM0EjXM6S4n2TFzyQ3OIsTmzDbYN2AgDRbMOPhHjZvxQWONAzuHZH5qf6hNzANNzOU5Xu1v0KGGNGaKjKlKoB+0NfmAj4hNx205prh6pJmZEAkhtyBOsuMduRSHxAP1AwT5gZkHIRexDrlsczNuy0ca8jyk2OKL2OE5x/5Q035CSR7ofFUqES+qAAZgVHEmNoEW9R3SyhSxIaA2s4+UeR9zEaGb6c+SDxdes2A9jBGjgDqd4Npgcth0ifJhc4xjyf9DnC4mmBDGkzYF74Lrk2gSe/QCdkfhsfnFnOaQYyk5ugvYxpF9VTGYnJBHxagkwB9z/C3T4sWmRfc/7v7h/PMA7JIzld+DAvmSlNWtF4xHFKrBIqPgWILS5wME3aWzBF9NjdarY6u9rZxBDKhOZgpsFQtI2fl8o2J1uoMLiQ8NzRJaIJAvPX2m3VRPyuc4Ugf1NDeQNjrpqSRaTKo2qNM0u6QLjv1aQzMe6o3k5pJhkH49xA1MaC2iOw3EH1GjM3KNbn6DZCMwdYx+s/S+UAhl94E5tOW6OfTLG5iJaNC0gg9JBiekykceWzO6siqYWm51wM7ry47Afg7lANcM7mgERsRHX2vbpClqUnVIhx6nT0RVLChguZPU8tFOXVHJ7OGCCEfTrQAgadST5gO+hU9SmSZbfpuo8fRS/Y8wGKIIVmw1cOEhUOhUIMGx6qxcMxcHpveU+OfF0RnHyWJpUgKhYZUjStiZBolzLFzKxOKJ8RSLQD6/nNLcS6x+m/YdU+4s8QGjl2j/Kq/FTAA5quefGLZHEnJ7K9xCrJJi5JukeIemmNJk/Tkgn4F5aXaAe5XkJ8nZ6UEkhY+5TPC4Zxgi0b3tfeNEtHlKMo4ppa5uU65tSTAmw2gzuJtsm34HZaMK536ZFJubJAe/MWsgny5g53mjW3sgGsqNr03ueCCXCADA1aQNrSDI2ISTD8TkEZ3tB2LpBjmL3udtyu3SCxwfmdLXNGaNCYuIJmIgiLKkkpRafojKOmTV6YFeqwwLz/ALiCJsbBvKb2PRTYfEMEtzDMZcJsADIN3WzEwSZJObnKUeJq2euKrJHlAIaSLjX66qA1oaGtnmSSSTvv3SptY17omsjhFNDbF52HK1vmg6dZMKN0Ttrve6A40S2oHU3FtoiT+aEC/JK3cSqZgQPMBlcYBD4NiRzjcIQxycdMy/m3UfBbMRjjl2Ai8XI5o"), closeSoftKeyboard());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.photoField), withText("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAoHCBYWFRgWFhYZGRgaHB0aHRoaGhwZGhkeGBwcGhoeHhocIS4lHB4rIxgcJjgmKy8xNjU1HCQ7QDs0Py40NTEBDAwMEA8QHxISHzQrJSs0NDY1NDQ0NDQ0NjQ0NDQ0NDQ9NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NP/AABEIAMIBAwMBIgACEQEDEQH/xAAcAAACAgMBAQAAAAAAAAAAAAAEBQMGAAECBwj/xAA9EAABAwIEBAQFAwMEAQMFAAABAAIRAyEEEjFBBVFhcQYigZEyobHB8BNC4RRS0SNicvGCBxUzFkNzksL/xAAaAQADAQEBAQAAAAAAAAAAAAABAgMEAAUG/8QAKREAAgICAgICAgIBBQAAAAAAAAECEQMhEjFBUQQTImEyoXEUFUJSsf/aAAwDAQACEQMRAD8AZ47Gsoh+KxL89NjppAiDWeNCOdNp02LpIgLyPjHFKmKrvrVDJcbAmzRs0KfxR4hqYyrmd5WNsxg0a0WFuaXsslnJvY8IoM4Q4srU3W+IDXnb7r3Lw4+QCIOn5ovEeE0y+tTaJMvbYDrtC914Lw002AvJB/t39eXZR/J9F3S7Kdxjh9U4uoyhTLwXA5WgN/TkAmSTlg5swJy6xeJL3hfgttnV35j/AGMMNH/J+p9I7qzPra7dulr87CPRDVMX1VOK7ZDm1pBdChQpNytY0dGiB6nVx7pbxGvmPwgAaQPyVxUxKEqVZTWJ2ZmXedCucpGuQsNEpctZlC6u0bqCtxAAQAkc4ryFRYZmWs6T1OJHYj2Qb+In+4qUs0UOoMsZeuHPCqj+JHmfdDVuLZdSfdD7v0c412XT9RbbUVCZx4EwXOHdxj6o1nET/cZ/5Lnm/QIpS6LnnWZ1VGcWeP3T7fVEs4weYKZZosZwZaMNWgpzTqSFSaPFgdvZP8BxFjgLx3R5xfkHEetepG1EG187rtrkUzqDWvSninhvD1wSWZHmf9SnDXDqRBa4/wDIFGtepGvTKTQrR5hx7wLiaUupf67I1H/yerDt0Z3gKnOpEWNiLRERC+h2PSfjvhjD4oEvZlftUZAf0nZw7+kIv8ikJ8VTR4g2muwxPvEPhWvhfM6HU5tUaDlvpnH7D3tyJSBwN7hMk0U5KXQs4qZ8vL6qDh1ZocM9r72Vi4H4ediS573FlJpguHxPdrkZIiYMkmQJFjKtuH4fQomKVFjSP3uGd5/83SfaEFb7EnSejzrFYwue4jQlYvTv6h/N3/7LERNnl+E8NYt7Q9mFruaQCCKbrg3BAiSDsRZGcO8KYyrUbTGGqMLr5qjXMY0DVznlugmCLmbRNl77hnEhkTDbE6DS8AaDpdSYnEE9kqqRzfErfhjwrQwTczfPWIh1VwuOYYP2t+Z3OycVayjq1UFVqp6JuTfZK+uN59Oe3og31Fy96he+LlcA7LlzE7gDmTA/k9NUvq47ZoUeGDqr8rdP3HkOqg8yulsqsbathNXFAaIcYhzjAUPEMG5jw0GWu0O8DWR059VpuJDW5Wi/PmoucpOmVUFVoLDmjW/fT2Q1bEs/2+yDw9R0OD4M8p+6XNwb3Pyl4BOgkSewS260gqIxaQ4xA9JW8dgREsnst4fAhglzpP5oim4kRAv8ymUU1sD70VnEYdw5j0SaqHgwbhXsOzB7cs6AWuDP/V/8pbV4I515YzufsJSqNdCyipKmVWlhHP0BHfVMKGHLQAJsrCzgrgLPHeCB80LWwDm2Lm+l10k6OxxjHoVF/K55C59kSxuUZnugI3CcNEZhed+i1iMDnkGwNrbDQX9EYRXbHlJvSAqWPn4dBueXdNMHjiD5ggcL4abmlz3G8x20m/U/hT1/DRaxja/vC6UF4Fhf/JDDBcRI0ee2ydYbikxmj0VZp4BnNw/OyYUMGzZzvWP8KUZSi+yjjFlop1g7QqYPVbNXIOvdHYXiYNj91aOZXTJuI6a9E0avPRL2OsDsVKx6umTaGT6IINgQRBBuCDqIOoXm3i//ANPpDquCF7l1CYB//Gdj/tNuRGi9Dw9eOyndBuPVVUtCq0zz7gmHazA4drhla2kXvnylry5zn5p0IMgzpEJXisLUDWvc7KHmGMFqjrEy8keQQJIFxzmy9C4rgP1WQ2A6Qb6OAcC4HuBHqvPPEZqsxbZcXtyeVphpaSYiPwn0S5p8cTce10W+Pj+3JxfXZ1S4cyBmLydz+o8T6Z7LaX4njQY4tcIcDBALTHrKxeB9nzPbPT/0a/6nqDoaMo0+p5oSo/fZd1XoKvVtGy+jUaR4bZFWqIN71JVcg69XKF0nRy2brVQ0SlGLxZM8uSixeKndKa2IJMLFlyuWkaceP2NGsc5sgwDoNSRv6WTvh9MUqT3NMkm57AEDtdIsJTc9hLHeaPh0JAkeU7/wiOG8RLC5j2Ocw6zAc3I0TYm5Atl1IAtOqYuN/seTTVIFxWOe98mI9T/4jQafdRPqAnry17fWPZMKnCM4z0HNew8iQR67HoYIQP8AS1W/seDe4BOs7tmdp7FVaCmjKL+h/PzRMcAWElztdBppzPb7KDBcMecrnNi+jgR9xborLhuBsyEuMuItlAaBbS1ye5vCjlyRjpsLcUtsXVMryJgNHwzuY5XWg1n7hNtBEeyp/FeJmnUdTqNc17XWcwwMuxAAv6gx6LvAeIsxa0mYcDmg+5F4Nh3VoJVZq+rG0qZaMQwADIA0d4+f8oaowsAOUvcdIEj0hYyscodNv9pL2xpqBoexjkuqNSxc0jL0u3tJjTXQdlRwT2hZYIgVVtd4zFrgOgn6XQFTB1KT2PzE3a9rx5mggg3sYg9NrSnFamxxJLi1x/c0ke4FohbpvcwNzPaSCSHukOk2iMpJd1v9Im8dBWCLWmT8KZ/pNmxEg+9zBvBXLKQmCNOfTv8AlwpG4kAB1nScpyk9Mt7yTPzRlKnTrWY5zX63H8wRfYyuUWiMsMou60BZXA2HyIlHUHkwCO3Rc1eGVBoQ7tafQ+ijZQe39jhFzb+E3ZJh7WBw0uPoo6uHIuDEajT25qNlfzC/f8PZd18Qss1xlTO/wK+IYssBn8KX4DiDhus41iQSGdJKXUByQa1Y6Wi6cK4uWGDLmnUb/wA9lZMPWDxmaZG/MTzC86w1Qp/w/FlsX/OvNPDJWmJKHlFvpuRFN8JdhMQHjryRbStMZX0RaCA5JPE/ABiGOczK2uG5WvO4kEtJ6wQDtKcArtpTtKSpgjKUJXE8Pr+HKwcQ6lXneKciTcwQTPdYvbnUGnVv1WKf0x9s3/7pk9f2JqzkHUKIqlCVStlHk2C16gbc2CQYvEyZR3Fa14/OiQYqveF5+fK2+KNOKHkHxNZc0WSgsQ+Sj8J63t09Ot1GKNSVEsOYQ5riCDI33GYxYGQAI3gdEwxoFWkK7QLw1413AnuDaeUFdnAB1A1Jl5MBrXtNryS3LmAFpM2mTFl3wSgQHte2WPHwzckghwHcb9F2WPGpLx/4Qnr8l4FTQ5vnY5zHblpIkdY1CZ4Pi1afO9pABglok8tvVLquJaTlY0NeQQ5uZxbItYuF95BO2qnOHa5pewkCQ0TNzeddRpfqrJvwM+T3FJ/5Dq3FKktLneWdgBHW2qfYbGjLLjDeZNgVSaT84yk/96X6bIDEOe4ZP1DAAAc0zAGvKTH0WL5Px/skmnQmTjNKS1Y48R4nD1agaILiMpgkRJjNMesbojA8MpsbDWhjdC7d0Wu7Vxn+ELw/htKkM0EjXM6S4n2TFzyQ3OIsTmzDbYN2AgDRbMOPhHjZvxQWONAzuHZH5qf6hNzANNzOU5Xu1v0KGGNGaKjKlKoB+0NfmAj4hNx205prh6pJmZEAkhtyBOsuMduRSHxAP1AwT5gZkHIRexDrlsczNuy0ca8jyk2OKL2OE5x/5Q035CSR7ofFUqES+qAAZgVHEmNoEW9R3SyhSxIaA2s4+UeR9zEaGb6c+SDxdes2A9jBGjgDqd4Npgcth0ifJhc4xjyf9DnC4mmBDGkzYF74Lrk2gSe/QCdkfhsfnFnOaQYyk5ugvYxpF9VTGYnJBHxagkwB9z/C3T4sWmRfc/7v7h/PMA7JIzld+DAvmSlNWtF4xHFKrBIqPgWILS5wME3aWzBF9NjdarY6u9rZxBDKhOZgpsFQtI2fl8o2J1uoMLiQ8NzRJaIJAvPX2m3VRPyuc4Ugf1NDeQNjrpqSRaTKo2qNM0u6QLjv1aQzMe6o3k5pJhkH49xA1MaC2iOw3EH1GjM3KNbn6DZCMwdYx+s/S+UAhl94E5tOW6OfTLG5iJaNC0gg9JBiekykceWzO6siqYWm51wM7ry47Afg7lANcM7mgERsRHX2vbpClqUnVIhx6nT0RVLChguZPU8tFOXVHJ7OGCCEfTrQAgadST5gO+hU9SmSZbfpuo8fRS/Y8wGKIIVmw1cOEhUOhUIMGx6qxcMxcHpveU+OfF0RnHyWJpUgKhYZUjStiZBolzLFzKxOKJ8RSLQD6/nNLcS6x+m/YdU+4s8QGjl2j/Kq/FTAA5quefGLZHEnJ7K9xCrJJi5JukeIemmNJk/Tkgn4F5aXaAe5XkJ8nZ6UEkhY+5TPC4Zxgi0b3tfeNEtHlKMo4ppa5uU65tSTAmw2gzuJtsm34HZaMK536ZFJubJAe/MWsgny5g53mjW3sgGsqNr03ueCCXCADA1aQNrSDI2ISTD8TkEZ3tB2LpBjmL3udtyu3SCxwfmdLXNGaNCYuIJmIgiLKkkpRafojKOmTV6YFeqwwLz/ALiCJsbBvKb2PRTYfEMEtzDMZcJsADIN3WzEwSZJObnKUeJq2euKrJHlAIaSLjX66qA1oaGtnmSSSTvv3SptY17omsjhFNDbF52HK1vmg6dZMKN0Ttrve6A40S2oHU3FtoiT+aEC/JK3cSqZgQPMBlcYBD4NiRzjcIQxycdMy/m3UfBbMRjjl2Ai8XI5o"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText3.perform(pressImeActionButton());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.nameField),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText4.perform(replaceText("PHO"), closeSoftKeyboard());

        ViewInteraction appCompatEditText5 = onView(
                allOf(withId(R.id.nameField), withText("PHO"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText5.perform(pressImeActionButton());

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.submit_btn), withText("Submit"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                3),
                        isDisplayed()));
        materialButton2.perform(click());

        pressBack();

        ViewInteraction appCompatEditText6 = onView(
                allOf(withId(R.id.photoField), withText("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAoHCBYWFRgWFhYZGRgaHB0aHRoaGhwZGhkeGBwcGhoeHhocIS4lHB4rIxgcJjgmKy8xNjU1HCQ7QDs0Py40NTEBDAwMEA8QHxISHzQrJSs0NDY1NDQ0NDQ0NjQ0NDQ0NDQ9NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NP/AABEIAMIBAwMBIgACEQEDEQH/xAAcAAACAgMBAQAAAAAAAAAAAAAEBQMGAAECBwj/xAA9EAABAwIEBAQFAwMEAQMFAAABAAIRAyEEEjFBBVFhcQYigZEyobHB8BNC4RRS0SNicvGCBxUzFkNzksL/xAAaAQADAQEBAQAAAAAAAAAAAAABAgMEAAUG/8QAKREAAgICAgICAgIBBQAAAAAAAAECEQMhEjFBUQQTImEyoXEUFUJSsf/aAAwDAQACEQMRAD8AZ47Gsoh+KxL89NjppAiDWeNCOdNp02LpIgLyPjHFKmKrvrVDJcbAmzRs0KfxR4hqYyrmd5WNsxg0a0WFuaXsslnJvY8IoM4Q4srU3W+IDXnb7r3Lw4+QCIOn5ovEeE0y+tTaJMvbYDrtC914Lw002AvJB/t39eXZR/J9F3S7Kdxjh9U4uoyhTLwXA5WgN/TkAmSTlg5swJy6xeJL3hfgttnV35j/AGMMNH/J+p9I7qzPra7dulr87CPRDVMX1VOK7ZDm1pBdChQpNytY0dGiB6nVx7pbxGvmPwgAaQPyVxUxKEqVZTWJ2ZmXedCucpGuQsNEpctZlC6u0bqCtxAAQAkc4ryFRYZmWs6T1OJHYj2Qb+In+4qUs0UOoMsZeuHPCqj+JHmfdDVuLZdSfdD7v0c412XT9RbbUVCZx4EwXOHdxj6o1nET/cZ/5Lnm/QIpS6LnnWZ1VGcWeP3T7fVEs4weYKZZosZwZaMNWgpzTqSFSaPFgdvZP8BxFjgLx3R5xfkHEetepG1EG187rtrkUzqDWvSninhvD1wSWZHmf9SnDXDqRBa4/wDIFGtepGvTKTQrR5hx7wLiaUupf67I1H/yerDt0Z3gKnOpEWNiLRERC+h2PSfjvhjD4oEvZlftUZAf0nZw7+kIv8ikJ8VTR4g2muwxPvEPhWvhfM6HU5tUaDlvpnH7D3tyJSBwN7hMk0U5KXQs4qZ8vL6qDh1ZocM9r72Vi4H4ediS573FlJpguHxPdrkZIiYMkmQJFjKtuH4fQomKVFjSP3uGd5/83SfaEFb7EnSejzrFYwue4jQlYvTv6h/N3/7LERNnl+E8NYt7Q9mFruaQCCKbrg3BAiSDsRZGcO8KYyrUbTGGqMLr5qjXMY0DVznlugmCLmbRNl77hnEhkTDbE6DS8AaDpdSYnEE9kqqRzfErfhjwrQwTczfPWIh1VwuOYYP2t+Z3OycVayjq1UFVqp6JuTfZK+uN59Oe3og31Fy96he+LlcA7LlzE7gDmTA/k9NUvq47ZoUeGDqr8rdP3HkOqg8yulsqsbathNXFAaIcYhzjAUPEMG5jw0GWu0O8DWR059VpuJDW5Wi/PmoucpOmVUFVoLDmjW/fT2Q1bEs/2+yDw9R0OD4M8p+6XNwb3Pyl4BOgkSewS260gqIxaQ4xA9JW8dgREsnst4fAhglzpP5oim4kRAv8ymUU1sD70VnEYdw5j0SaqHgwbhXsOzB7cs6AWuDP/V/8pbV4I515YzufsJSqNdCyipKmVWlhHP0BHfVMKGHLQAJsrCzgrgLPHeCB80LWwDm2Lm+l10k6OxxjHoVF/K55C59kSxuUZnugI3CcNEZhed+i1iMDnkGwNrbDQX9EYRXbHlJvSAqWPn4dBueXdNMHjiD5ggcL4abmlz3G8x20m/U/hT1/DRaxja/vC6UF4Fhf/JDDBcRI0ee2ydYbikxmj0VZp4BnNw/OyYUMGzZzvWP8KUZSi+yjjFlop1g7QqYPVbNXIOvdHYXiYNj91aOZXTJuI6a9E0avPRL2OsDsVKx6umTaGT6IINgQRBBuCDqIOoXm3i//ANPpDquCF7l1CYB//Gdj/tNuRGi9Dw9eOyndBuPVVUtCq0zz7gmHazA4drhla2kXvnylry5zn5p0IMgzpEJXisLUDWvc7KHmGMFqjrEy8keQQJIFxzmy9C4rgP1WQ2A6Qb6OAcC4HuBHqvPPEZqsxbZcXtyeVphpaSYiPwn0S5p8cTce10W+Pj+3JxfXZ1S4cyBmLydz+o8T6Z7LaX4njQY4tcIcDBALTHrKxeB9nzPbPT/0a/6nqDoaMo0+p5oSo/fZd1XoKvVtGy+jUaR4bZFWqIN71JVcg69XKF0nRy2brVQ0SlGLxZM8uSixeKndKa2IJMLFlyuWkaceP2NGsc5sgwDoNSRv6WTvh9MUqT3NMkm57AEDtdIsJTc9hLHeaPh0JAkeU7/wiOG8RLC5j2Ocw6zAc3I0TYm5Atl1IAtOqYuN/seTTVIFxWOe98mI9T/4jQafdRPqAnry17fWPZMKnCM4z0HNew8iQR67HoYIQP8AS1W/seDe4BOs7tmdp7FVaCmjKL+h/PzRMcAWElztdBppzPb7KDBcMecrnNi+jgR9xborLhuBsyEuMuItlAaBbS1ye5vCjlyRjpsLcUtsXVMryJgNHwzuY5XWg1n7hNtBEeyp/FeJmnUdTqNc17XWcwwMuxAAv6gx6LvAeIsxa0mYcDmg+5F4Nh3VoJVZq+rG0qZaMQwADIA0d4+f8oaowsAOUvcdIEj0hYyscodNv9pL2xpqBoexjkuqNSxc0jL0u3tJjTXQdlRwT2hZYIgVVtd4zFrgOgn6XQFTB1KT2PzE3a9rx5mggg3sYg9NrSnFamxxJLi1x/c0ke4FohbpvcwNzPaSCSHukOk2iMpJd1v9Im8dBWCLWmT8KZ/pNmxEg+9zBvBXLKQmCNOfTv8AlwpG4kAB1nScpyk9Mt7yTPzRlKnTrWY5zX63H8wRfYyuUWiMsMou60BZXA2HyIlHUHkwCO3Rc1eGVBoQ7tafQ+ijZQe39jhFzb+E3ZJh7WBw0uPoo6uHIuDEajT25qNlfzC/f8PZd18Qss1xlTO/wK+IYssBn8KX4DiDhus41iQSGdJKXUByQa1Y6Wi6cK4uWGDLmnUb/wA9lZMPWDxmaZG/MTzC86w1Qp/w/FlsX/OvNPDJWmJKHlFvpuRFN8JdhMQHjryRbStMZX0RaCA5JPE/ABiGOczK2uG5WvO4kEtJ6wQDtKcArtpTtKSpgjKUJXE8Pr+HKwcQ6lXneKciTcwQTPdYvbnUGnVv1WKf0x9s3/7pk9f2JqzkHUKIqlCVStlHk2C16gbc2CQYvEyZR3Fa14/OiQYqveF5+fK2+KNOKHkHxNZc0WSgsQ+Sj8J63t09Ot1GKNSVEsOYQ5riCDI33GYxYGQAI3gdEwxoFWkK7QLw1413AnuDaeUFdnAB1A1Jl5MBrXtNryS3LmAFpM2mTFl3wSgQHte2WPHwzckghwHcb9F2WPGpLx/4Qnr8l4FTQ5vnY5zHblpIkdY1CZ4Pi1afO9pABglok8tvVLquJaTlY0NeQQ5uZxbItYuF95BO2qnOHa5pewkCQ0TNzeddRpfqrJvwM+T3FJ/5Dq3FKktLneWdgBHW2qfYbGjLLjDeZNgVSaT84yk/96X6bIDEOe4ZP1DAAAc0zAGvKTH0WL5Px/skmnQmTjNKS1Y48R4nD1agaILiMpgkRJjNMesbojA8MpsbDWhjdC7d0Wu7Vxn+ELw/htKkM0EjXM6S4n2TFzyQ3OIsTmzDbYN2AgDRbMOPhHjZvxQWONAzuHZH5qf6hNzANNzOU5Xu1v0KGGNGaKjKlKoB+0NfmAj4hNx205prh6pJmZEAkhtyBOsuMduRSHxAP1AwT5gZkHIRexDrlsczNuy0ca8jyk2OKL2OE5x/5Q035CSR7ofFUqES+qAAZgVHEmNoEW9R3SyhSxIaA2s4+UeR9zEaGb6c+SDxdes2A9jBGjgDqd4Npgcth0ifJhc4xjyf9DnC4mmBDGkzYF74Lrk2gSe/QCdkfhsfnFnOaQYyk5ugvYxpF9VTGYnJBHxagkwB9z/C3T4sWmRfc/7v7h/PMA7JIzld+DAvmSlNWtF4xHFKrBIqPgWILS5wME3aWzBF9NjdarY6u9rZxBDKhOZgpsFQtI2fl8o2J1uoMLiQ8NzRJaIJAvPX2m3VRPyuc4Ugf1NDeQNjrpqSRaTKo2qNM0u6QLjv1aQzMe6o3k5pJhkH49xA1MaC2iOw3EH1GjM3KNbn6DZCMwdYx+s/S+UAhl94E5tOW6OfTLG5iJaNC0gg9JBiekykceWzO6siqYWm51wM7ry47Afg7lANcM7mgERsRHX2vbpClqUnVIhx6nT0RVLChguZPU8tFOXVHJ7OGCCEfTrQAgadST5gO+hU9SmSZbfpuo8fRS/Y8wGKIIVmw1cOEhUOhUIMGx6qxcMxcHpveU+OfF0RnHyWJpUgKhYZUjStiZBolzLFzKxOKJ8RSLQD6/nNLcS6x+m/YdU+4s8QGjl2j/Kq/FTAA5quefGLZHEnJ7K9xCrJJi5JukeIemmNJk/Tkgn4F5aXaAe5XkJ8nZ6UEkhY+5TPC4Zxgi0b3tfeNEtHlKMo4ppa5uU65tSTAmw2gzuJtsm34HZaMK536ZFJubJAe/MWsgny5g53mjW3sgGsqNr03ueCCXCADA1aQNrSDI2ISTD8TkEZ3tB2LpBjmL3udtyu3SCxwfmdLXNGaNCYuIJmIgiLKkkpRafojKOmTV6YFeqwwLz/ALiCJsbBvKb2PRTYfEMEtzDMZcJsADIN3WzEwSZJObnKUeJq2euKrJHlAIaSLjX66qA1oaGtnmSSSTvv3SptY17omsjhFNDbF52HK1vmg6dZMKN0Ttrve6A40S2oHU3FtoiT+aEC/JK3cSqZgQPMBlcYBD4NiRzjcIQxycdMy/m3UfBbMRjjl2Ai8XI5o"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText6.perform(click());

        ViewInteraction appCompatEditText7 = onView(
